# europrono

./: .env.local  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: asana.yml
alembic/: env.py
alembic/versions/: bb9165260cc4_test_20201231_160043.py
app/api/api_v1/endpoints/: login.py
app/core/: config.py
dockerfiles/: Dockerfile.backend
