[tool.poetry]
name = "europrono"
version = "0.1.0"
description = ""
authors = ["Fabien Loffredo <contact@fabienloffredo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "~0.62.0"
uvicorn = "~0.13.1"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.790"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
