[tool.poetry]
name = "europrono"
version = "0.1.0"
description = ""
authors = ["Fabien Loffredo <contact@fabienloffredo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "~0.62.0"
uvicorn = "~0.13.1"
SQLAlchemy = "^1.3.22"
alembic = "^1.4.3"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^1.7.3"}
python-dotenv = "^0.15.0"
emails = "^0.6"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.790"
isort = "^5.6.4"
sqlalchemy-stubs = "^0.3"

[tool.isort]
multi_line_output = 3
line_length = 88
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
